Overflow prevents div collapse if there are only floating elements
This resolves #278, where the Radiator View link was falling outside of
the sidebar box in readonly mode. The Add Node link normally forces the
parent box to the correct size to contain the floating Radiator View link.

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -377,6 +377,8 @@ body {
 
       .footer.actionbar {
         @include rounded_bottom;
+        // Overflow prevents div collapse if there are only floating elements
+        overflow: auto;
       }
 
       span.count {
